      
    - Query.add_column() can accept FromClause objects
      in the same manner as session.query() can.

    - Comparison of many-to-one relation to NULL is
      properly converted to IS NOT NULL based on not_().
     
    - Extra checks added to ensure explicit 
      primaryjoin/secondaryjoin are ClauseElement 
      instances, to prevent more confusing errors later 
      on.
    
    - comparator_factory argument is now documented
      and supported by all MapperProperty types,
      including column_property(), relation(), 
      backref(), and synonym() [ticket:5051].
      
    - Changed the name of PropertyLoader to
      RelationProperty, to be consistent
      with all the other names.  PropertyLoader is 
      still present as a synonym.
    
    - fixed "double iter()" call causing bus errors
      in shard API, removed errant result.close()
      left over from the 0.4 version. [ticket:1099]
      [ticket:1228]
      
- sql
    - Fixed the import weirdness in sqlalchemy.sql
      to not export __names__ [ticket:1215].
      
    - Added NotImplementedError for params() method
      on Insert/Update/Delete constructs.  These items
      currently don't support this functionality, which
      also would be a little misleading compared to
      values().

    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

- documentation
    - Tickets [ticket:1200] [ticket:1149].
      
    - Added note about create_session() defaults.
    
    - Added section about metadata.reflect().
    
    - Updated `TypeDecorator` section.
    
    - Rewrote the "threadlocal" strategy section of 
      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added